cmake_minimum_required(VERSION 3.13)

project(main)

set(CMAKE_C_STANDARD 99)

add_library(os STATIC src/OS/os.c)
add_library(util STATIC src/util.c)
add_library(network STATIC src/L2/network.c)
add_library(dummy STATIC src/L2/interfaces/dummy.c)
add_library(loopback STATIC src/L2/interfaces/loopback.c)
if(UNIX)
  add_library(linux STATIC src/OS/linux.c)
else()
  add_library(windows STATIC src/OS/windows.c)
endif()

set(library os util dummy network)
set(library os util loopback network)

add_executable(os_osinit_test.exe ./test/os_osinit_test.c)
add_executable(util_log_test.exe ./test/util_log_test.c)
add_executable(util_getlocaltime_test.exe ./test/util_getlocaltime_test.c)
add_executable(os_flockfile_test.exe ./test/os_flockfile_test.c)
add_executable(network_ifnetalloc_test.exe ./test/network_ifnetalloc_test.c)

add_executable(dummy_dummyinit_test.exe ./test/dummy_dummyinit_test.c)
add_executable(loopback_loopbackinit_test.exe ./test/loopback_loopbackinit_test.c)
add_executable(loopback_loopbackoutput_test.exe ./test/loopback_loopbackoutput_test.c)

if(UNIX)
  target_link_libraries(os_osinit_test.exe ${library} network linux)
  target_link_libraries(util_log_test.exe ${library} network linux)
  target_link_libraries(util_getlocaltime_test.exe ${library} network linux)
  target_link_libraries(os_flockfile_test.exe ${library} network linux)
  target_link_libraries(network_ifnetalloc_test.exe ${library} network linux)
  target_link_libraries(dummy_dummyinit_test.exe ${library} network dummy linux)
  target_link_libraries(loopback_loopbackinit_test.exe ${library} linux)
  target_link_libraries(loopback_loopbackoutput_test.exe ${library} linux)
else()
  target_link_libraries(os_osinit_test.exe ${library} windows)
  target_link_libraries(util_log_test.exe ${library} windows)
  target_link_libraries(util_getlocaltime_test.exe ${library} windows)
  target_link_libraries(os_flockfile_test.exe ${library} windows)
  target_link_libraries(network_ifnetalloc_test.exe ${library} windows)
  target_link_libraries(dummy_dummyinit_test.exe ${library} windows)
  target_link_libraries(loopback_loopbackinit_test.exe ${library} windows)
  target_link_libraries(loopback_loopbackoutput_test.exe ${library} windows)
endif()